<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kamalapp.cashify.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_insert"
        android:name="com.kamalapp.cashify.ui.insert.InsertFragment"
        android:label="@string/title_insert"
        tools:layout="@layout/fragment_insert">
        <action
            android:id="@+id/action_insertFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
    </fragment>


    <fragment
        android:id="@+id/navigation_history"
        android:name="com.kamalapp.cashify.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>