<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="8dp"
    card_view:cardBackgroundColor="@android:color/white"
    android:clipToPadding="false">

<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="#E8F0FA"
android:padding="8dp">

<ImageView
    android:id="@+id/ivItemPhoto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:contentDescription="@string/image"
    android:scaleType="centerCrop"
    android:transitionName="photoTransition"
    tools:src="@tools:sample/backgrounds/scenic"
    tools:ignore="MissingConstraints" />

<TextView
    android:id="@+id/tvItemName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:textSize="14sp"
    android:textStyle="bold"
    card_view:layout_constraintTop_toBottomOf="@id/ivItemPhoto"
    card_view:layout_constraintStart_toStartOf="parent"
    card_view:layout_constraintEnd_toEndOf="parent"
    android:maxLines="2"
    tools:text="@string/judul"
    android:gravity="center" />

<TextView
    android:id="@+id/tvItemDescription"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:textSize="13sp"
    card_view:layout_constraintTop_toBottomOf="@id/tvItemName"
    card_view:layout_constraintStart_toStartOf="parent"
    card_view:layout_constraintEnd_toEndOf="parent"
    tools:text="@string/deskripsi"
    android:maxLines="1"
    android:gravity="center" />
</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
